salesforce-port/force-app/main/default/objects/Expense_Policy__c/Expense_Policy__c.object-meta.xml
<CustomObject>
    <label>Expense Policy</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>