salesforce-port/force-app/main/default/objects/Expense_Policy__c/fields/Approval_Mode__c.field-meta.xml
<CustomField>
    <fullName>Approval_Mode__c</fullName>
    <label>Approval Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Basic</fullName><default>true</default><label>Basic Approval</label></value>
            <value><fullName>Advanced</fullName><default>false</default><label>Advanced Approval</label></value>
            <value><fullName>Optional</fullName><default>false</default><label>Optional</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>