salesforce-port/force-app/main/default/objects/Expense_Policy__c/fields/Auto_Approve_Limit__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approve_Limit__c</fullName>
    <label>Auto Approve Limit</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>