salesforce-port/force-app/main/default/objects/Expense_Policy__c/fields/Categories_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Categories_Enabled__c</fullName>
    <label>Categories Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>