salesforce-port/force-app/main/default/objects/Expense_Policy__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Default Currency</label>
    <type>Text</type>
    <length>3</length>
    <required>true</required>
</CustomField>