salesforce-port/force-app/main/default/objects/Expense_Policy__c/fields/Max_Expense_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Expense_Age_Days__c</fullName>
    <label>Max Expense Age (Days)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>