salesforce-port/force-app/main/default/objects/Expense_Policy__c/fields/Max_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Expense_Amount__c</fullName>
    <label>Max Expense Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>