salesforce-port/force-app/main/default/objects/Expense_Policy__c/fields/Receipt_Required_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Required_Amount__c</fullName>
    <label>Receipt Required Above</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>