salesforce-port/force-app/main/default/objects/Expense_Policy__c/fields/Tags_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Tags_Enabled__c</fullName>
    <label>Tags Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>