salesforce-port/force-app/main/default/objects/Expense_Policy__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Team</fullName><default>true</default><label>Team</label></value>
            <value><fullName>Corporate</fullName><default>false</default><label>Corporate</label></value>
            <value><fullName>Personal</fullName><default>false</default><label>Personal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>